--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   ],
   "dependencies" : {
     "stream-buffers" :  ">= 0.2.3",
-    "connect" :  ">= 2.7.2",
+    "connect" :  ">= 2.7.2"
   },
   "engines": {
     "node": ">=0.8"
